k8s_setup/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: default
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.21.11
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: gitea-data
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-pvc
